-- Harness racing platform — canonical PostgreSQL 16 schema.
-- Applies clean to an empty database. Authoritative source; mirrored verbatim
-- into sql/migrations/0001_initial.sql.
--
-- Design notes:
--   * Every domain/categorical column is a FK to a lookup table (states,
--     surfaces, race_gaits, start_types, race_classes, age_classes,
--     race_types, track_conditions, horse_sexes, stewards_codes).
--   * Workflow state machines stay as PG ENUMs because they are tightly
--     coupled to application code paths.
--   * Sectionals + gross + lead + mile-rate are NUMERIC(8,3) seconds;
--     display strings are projected at the Pydantic layer. Clock-time-of-day
--     printed on the source card is kept as races.race_time_str because it
--     has no canonical numeric form.
--   * mv_par_times: materialised view, trimmed mean (p10-p90) of gross/lead/
--     mile-rate per grouping; refresh CONCURRENTLY.
--   * Scrape/parse/error logs are unified into pipeline_log with a stage
--     ENUM and nullable error-only columns.
--   * persons covers both trainers and drivers; the same individual
--     frequently appears in both roles.

BEGIN;

-- ---------------------------------------------------------------------------
-- 1. ENUMs (workflow / state machines only)
-- ---------------------------------------------------------------------------

CREATE TYPE meeting_status AS ENUM (
    'PENDING_DOWNLOAD',
    'DOWNLOADED',
    'PARSED',
    'FAILED'
);

CREATE TYPE day_night AS ENUM (
    'DAY',
    'NIGHT',
    'TWILIGHT',
    'UNKNOWN'
);

CREATE TYPE log_level AS ENUM (
    'DEBUG',
    'INFO',
    'WARNING',
    'ERROR',
    'CRITICAL'
);

CREATE TYPE pipeline_stage AS ENUM (
    'SCRAPE',
    'PARSE',
    'TRANSFORM',
    'API'
);

-- ---------------------------------------------------------------------------
-- 2. Lookup tables
-- ---------------------------------------------------------------------------

CREATE TABLE countries (
    id          INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code        VARCHAR(8)  NOT NULL UNIQUE,
    name        VARCHAR(64) NOT NULL,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT now()
);

CREATE TABLE states (
    id          INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code        VARCHAR(8)  NOT NULL,
    country_id  INT         NOT NULL,
    name        VARCHAR(64) NOT NULL,
    created_at  TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uq_states_code_country UNIQUE (code, country_id),
    CONSTRAINT fk_states_country
        FOREIGN KEY (country_id) REFERENCES countries (id)
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE surfaces (
    id   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(32) NOT NULL UNIQUE
);

CREATE TABLE track_conditions (
    id   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(32) NOT NULL UNIQUE
);

CREATE TABLE race_gaits (
    id   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(32) NOT NULL UNIQUE
);

CREATE TABLE start_types (
    id   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(32) NOT NULL UNIQUE
);

CREATE TABLE race_classes (
    id   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(64) NOT NULL UNIQUE
);

CREATE TABLE age_classes (
    id   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(64) NOT NULL UNIQUE
);

CREATE TABLE race_types (
    id   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(64) NOT NULL UNIQUE
);

CREATE TABLE horse_sexes (
    id   INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(4)  NOT NULL UNIQUE,
    name VARCHAR(32) NOT NULL
);

CREATE TABLE stewards_codes (
    id          INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code        VARCHAR(16)  NOT NULL UNIQUE,
    description VARCHAR(255) NULL
);

-- ---------------------------------------------------------------------------
-- 3. Seed lookups (geography + canonical domain values)
-- ---------------------------------------------------------------------------

INSERT INTO countries (code, name) VALUES
    ('AU', 'Australia'),
    ('NZ', 'New Zealand');

INSERT INTO states (code, country_id, name)
SELECT s.code, c.id, s.name
FROM (VALUES
    ('VIC', 'AU', 'Victoria'),
    ('NSW', 'AU', 'New South Wales'),
    ('QLD', 'AU', 'Queensland'),
    ('WA',  'AU', 'Western Australia'),
    ('SA',  'AU', 'South Australia'),
    ('TAS', 'AU', 'Tasmania'),
    ('NT',  'AU', 'Northern Territory'),
    ('ACT', 'AU', 'Australian Capital Territory'),
    ('NTH', 'NZ', 'North Island'),
    ('STH', 'NZ', 'South Island')
) AS s(code, country_code, name)
JOIN countries c ON c.code = s.country_code;

INSERT INTO surfaces (name) VALUES ('Sand'), ('Loam'), ('Synthetic'), ('Mixed');

INSERT INTO track_conditions (name) VALUES ('Fast'), ('Good'), ('Slow'), ('Heavy');

INSERT INTO race_gaits (name) VALUES ('Pace'), ('Trot');

INSERT INTO start_types (name) VALUES ('Standing'), ('Mobile'), ('Tape');

INSERT INTO horse_sexes (code, name) VALUES
    ('H', 'Horse'),
    ('M', 'Mare'),
    ('G', 'Gelding'),
    ('F', 'Filly'),
    ('C', 'Colt'),
    ('R', 'Rig');

-- race_classes, age_classes, race_types, stewards_codes are open-ended;
-- they are populated by the parser as new values are encountered.

-- ---------------------------------------------------------------------------
-- 4. Core entities
-- ---------------------------------------------------------------------------

CREATE TABLE race_tracks (
    id          INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    track_name  VARCHAR(128) NOT NULL,
    state_id    INT          NOT NULL,
    surface_id  INT          NULL,
    created_at  TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT uq_race_tracks_name_state UNIQUE (track_name, state_id),
    CONSTRAINT fk_race_tracks_state
        FOREIGN KEY (state_id) REFERENCES states (id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_race_tracks_surface
        FOREIGN KEY (surface_id) REFERENCES surfaces (id)
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE race_meetings (
    id            INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    meeting_code  VARCHAR(32)    NOT NULL UNIQUE,
    track_id      INT            NOT NULL,
    meeting_date  DATE           NOT NULL,
    day_night     day_night      NOT NULL DEFAULT 'UNKNOWN',
    meeting_url   VARCHAR(512)   NULL,
    html_path     VARCHAR(512)   NULL,
    status        meeting_status NOT NULL DEFAULT 'PENDING_DOWNLOAD',
    scraped_at    TIMESTAMPTZ    NULL,
    created_at    TIMESTAMPTZ    NOT NULL DEFAULT now(),
    updated_at    TIMESTAMPTZ    NOT NULL DEFAULT now(),
    CONSTRAINT fk_race_meetings_track
        FOREIGN KEY (track_id) REFERENCES race_tracks (id)
        ON DELETE RESTRICT
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE races (
    id                  INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    meeting_id          INT            NOT NULL,
    race_number         INT            NOT NULL,
    race_name           VARCHAR(255)   NULL,
    distance_m          INT            NULL,
    race_type_id        INT            NULL,
    -- Rows with NULL race_gait_id or start_type_id are excluded from par-time
    -- computation (see WHERE filter on mv_par_times below).
    race_gait_id        INT            NULL,
    start_type_id       INT            NULL,
    race_class_id       INT            NULL,
    age_class_id        INT            NULL,
    race_purse          NUMERIC(12, 2) NULL,
    track_condition_id  INT            NULL,
    race_time_str       TEXT           NULL,
    is_final            BOOLEAN        NOT NULL DEFAULT true,
    created_at          TIMESTAMPTZ    NOT NULL DEFAULT now(),
    updated_at          TIMESTAMPTZ    NOT NULL DEFAULT now(),
    CONSTRAINT uq_races_meeting_race_number UNIQUE (meeting_id, race_number),
    CONSTRAINT fk_races_meeting
        FOREIGN KEY (meeting_id) REFERENCES race_meetings (id)
        ON DELETE RESTRICT
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_races_race_type
        FOREIGN KEY (race_type_id) REFERENCES race_types (id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_races_race_gait
        FOREIGN KEY (race_gait_id) REFERENCES race_gaits (id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_races_start_type
        FOREIGN KEY (start_type_id) REFERENCES start_types (id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_races_race_class
        FOREIGN KEY (race_class_id) REFERENCES race_classes (id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_races_age_class
        FOREIGN KEY (age_class_id) REFERENCES age_classes (id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_races_track_condition
        FOREIGN KEY (track_condition_id) REFERENCES track_conditions (id)
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE race_times (
    race_id        INT             PRIMARY KEY,
    gross_time_s   NUMERIC(8, 3)   NULL,
    lead_time_s    NUMERIC(8, 3)   NULL,
    mile_rate_s    NUMERIC(8, 3)   NULL,
    q1_s           NUMERIC(8, 3)   NULL,
    q2_s           NUMERIC(8, 3)   NULL,
    q3_s           NUMERIC(8, 3)   NULL,
    q4_s           NUMERIC(8, 3)   NULL,
    margin1        NUMERIC(6, 3)   NULL,
    margin2        NUMERIC(6, 3)   NULL,
    created_at     TIMESTAMPTZ     NOT NULL DEFAULT now(),
    CONSTRAINT fk_race_times_race
        FOREIGN KEY (race_id) REFERENCES races (id)
        ON DELETE CASCADE
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE persons (
    id          INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name        VARCHAR(128) NOT NULL,
    -- link_token is the slug from harness.org.au profile links and is the
    -- only stable cross-reference we have for participants.
    link_token  VARCHAR(64)  NOT NULL UNIQUE,
    created_at  TIMESTAMPTZ  NOT NULL DEFAULT now()
);

-- horse_id is the source-system id from harness.org.au. NOT autoincrement —
-- this is the canonical reference shared across every result page on the
-- upstream site and is required for cross-meeting form lookups.
CREATE TABLE horses (
    horse_id    INT          PRIMARY KEY,
    horse_name  VARCHAR(128) NOT NULL,
    sex_id      INT          NULL,
    foaled      SMALLINT     NULL,
    sire_id     INT          NULL,
    dam_id      INT          NULL,
    created_at  TIMESTAMPTZ  NOT NULL DEFAULT now(),
    updated_at  TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT ck_horses_sire_not_self CHECK (sire_id IS NULL OR sire_id <> horse_id),
    CONSTRAINT ck_horses_dam_not_self  CHECK (dam_id  IS NULL OR dam_id  <> horse_id),
    CONSTRAINT fk_horses_sex
        FOREIGN KEY (sex_id) REFERENCES horse_sexes (id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_horses_sire
        FOREIGN KEY (sire_id) REFERENCES horses (horse_id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_horses_dam
        FOREIGN KEY (dam_id) REFERENCES horses (horse_id)
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE runners (
    id               INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    race_id          INT             NOT NULL,
    horse_id         INT             NOT NULL,
    runner_number    INT             NULL,
    -- barrier holds the numeric prefix (e.g. 5 from "Fr5"); barrier_raw keeps
    -- the original token ("Fr5", "1A", "SR", "FP") for analytics that need row
    -- or front/back context that the integer column collapses.
    barrier          INT             NULL,
    barrier_raw      VARCHAR(8)      NULL,
    trainer_id       INT             NULL,
    driver_id        INT             NULL,
    finish_position  INT             NULL,
    raw_margin       VARCHAR(32)     NULL,
    adjusted_margin  NUMERIC(6, 3)   NULL,
    null_run         BOOLEAN         NOT NULL DEFAULT false,
    scratched        BOOLEAN         NOT NULL DEFAULT false,
    stake            NUMERIC(12, 2)  NULL,
    raw_price        VARCHAR(32)     NULL,
    starting_price   NUMERIC(8, 2)   NULL,
    created_at       TIMESTAMPTZ     NOT NULL DEFAULT now(),
    updated_at       TIMESTAMPTZ     NOT NULL DEFAULT now(),
    CONSTRAINT uq_runners_race_horse UNIQUE (race_id, horse_id),
    CONSTRAINT fk_runners_race
        FOREIGN KEY (race_id) REFERENCES races (id)
        ON DELETE RESTRICT
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_runners_horse
        FOREIGN KEY (horse_id) REFERENCES horses (horse_id)
        ON DELETE RESTRICT
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_runners_trainer
        FOREIGN KEY (trainer_id) REFERENCES persons (id)
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_runners_driver
        FOREIGN KEY (driver_id) REFERENCES persons (id)
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE stewards_comments (
    runner_id          INT            PRIMARY KEY,
    full_text          TEXT           NULL,
    created_at         TIMESTAMPTZ    NOT NULL DEFAULT now(),
    CONSTRAINT fk_stewards_comments_runner
        FOREIGN KEY (runner_id) REFERENCES runners (id)
        ON DELETE CASCADE
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE stewards_comment_codes (
    runner_id INT NOT NULL,
    code_id   INT NOT NULL,
    PRIMARY KEY (runner_id, code_id),
    CONSTRAINT fk_scc_runner
        FOREIGN KEY (runner_id) REFERENCES stewards_comments (runner_id)
        ON DELETE CASCADE
        DEFERRABLE INITIALLY IMMEDIATE,
    CONSTRAINT fk_scc_code
        FOREIGN KEY (code_id) REFERENCES stewards_codes (id)
        DEFERRABLE INITIALLY IMMEDIATE
);

-- ---------------------------------------------------------------------------
-- 5. Logging (unified) + dead-letter queues
-- ---------------------------------------------------------------------------

CREATE TABLE pipeline_log (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ts               TIMESTAMPTZ    NOT NULL DEFAULT now(),
    stage            pipeline_stage NOT NULL,
    agent            VARCHAR(32)    NOT NULL,
    module           VARCHAR(128)   NOT NULL,
    action           VARCHAR(128)   NOT NULL,
    level            log_level      NOT NULL DEFAULT 'INFO',
    meeting_code     VARCHAR(32)    NULL,
    race_number      INT            NULL,
    horse_id         INT            NULL,
    attempt          INT            NOT NULL DEFAULT 1,
    latency_ms       INT            NULL,
    outcome          VARCHAR(64)    NOT NULL,
    payload_hash     VARCHAR(64)    NULL,
    payload          JSONB          NULL,
    -- error-only columns: NULL on success rows
    stack_trace      TEXT           NULL,
    offending_html   TEXT           NULL,
    last_checkpoint  VARCHAR(255)   NULL,
    triaged          BOOLEAN        NOT NULL DEFAULT false
);

CREATE TABLE scrape_dlq (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ts              TIMESTAMPTZ NOT NULL DEFAULT now(),
    meeting_code    VARCHAR(32) NULL,
    payload         JSONB       NULL,
    error_log_id    BIGINT      NULL,
    reprocessed     BOOLEAN     NOT NULL DEFAULT false,
    reprocessed_at  TIMESTAMPTZ NULL,
    CONSTRAINT fk_scrape_dlq_error_log
        FOREIGN KEY (error_log_id) REFERENCES pipeline_log (id)
        ON DELETE SET NULL
        DEFERRABLE INITIALLY IMMEDIATE
);

CREATE TABLE parse_dlq (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    ts              TIMESTAMPTZ NOT NULL DEFAULT now(),
    meeting_code    VARCHAR(32) NULL,
    race_number     INT         NULL,
    payload         JSONB       NULL,
    error_log_id    BIGINT      NULL,
    reprocessed     BOOLEAN     NOT NULL DEFAULT false,
    reprocessed_at  TIMESTAMPTZ NULL,
    CONSTRAINT fk_parse_dlq_error_log
        FOREIGN KEY (error_log_id) REFERENCES pipeline_log (id)
        ON DELETE SET NULL
        DEFERRABLE INITIALLY IMMEDIATE
);

-- ---------------------------------------------------------------------------
-- 6. Indexes
-- ---------------------------------------------------------------------------

CREATE INDEX ix_race_meetings_meeting_date ON race_meetings (meeting_date);
CREATE INDEX ix_race_meetings_track_id     ON race_meetings (track_id);
CREATE INDEX ix_race_meetings_status       ON race_meetings (status);

-- Composite covering index supporting the par-times grouping query and
-- /tracks/{id}/pars filtering. Order chosen to match
-- (track_id → distance_m → race_gait_id → start_type_id) selectivity.
CREATE INDEX ix_races_par_lookup
    ON races (race_gait_id, start_type_id, distance_m)
    INCLUDE (race_class_id, age_class_id, track_condition_id);

CREATE INDEX ix_race_meetings_track_date ON race_meetings (track_id, meeting_date);

CREATE INDEX ix_horses_horse_name ON horses (horse_name);
CREATE INDEX ix_horses_sire       ON horses (sire_id) WHERE sire_id IS NOT NULL;
CREATE INDEX ix_horses_dam        ON horses (dam_id)  WHERE dam_id IS NOT NULL;

CREATE INDEX ix_persons_name ON persons (name);

CREATE INDEX ix_runners_horse_id ON runners (horse_id);
CREATE INDEX ix_runners_trainer ON runners (trainer_id) WHERE trainer_id IS NOT NULL;
CREATE INDEX ix_runners_driver  ON runners (driver_id)  WHERE driver_id IS NOT NULL;

CREATE INDEX ix_race_tracks_track_name ON race_tracks (track_name);
CREATE INDEX ix_race_tracks_state ON race_tracks (state_id);

CREATE INDEX ix_pipeline_log_ts          ON pipeline_log (ts DESC);
CREATE INDEX ix_pipeline_log_stage_level ON pipeline_log (stage, level);
CREATE INDEX ix_pipeline_log_meeting     ON pipeline_log (meeting_code)
    WHERE meeting_code IS NOT NULL;
CREATE INDEX ix_pipeline_log_untriaged_errors
    ON pipeline_log (ts DESC)
    WHERE level IN ('ERROR', 'CRITICAL') AND triaged = false;

CREATE INDEX ix_scrape_dlq_unprocessed
    ON scrape_dlq (ts DESC) WHERE reprocessed = false;
CREATE INDEX ix_parse_dlq_unprocessed
    ON parse_dlq (ts DESC) WHERE reprocessed = false;

-- ---------------------------------------------------------------------------
-- 7. Materialized view: mv_par_times (replaces track_pars)
-- ---------------------------------------------------------------------------
-- Trimmed mean (p10–p90) of gross_time_s, lead_time_s, mile_rate_s per
-- (track_id, distance_m, race_gait_id, start_type_id, track_condition_id,
--  race_class_id, age_class_id). Per-metric bounds are computed independently
-- so a NULL in one metric does not poison another. Rows where the metric is
-- NULL or zero are excluded from that metric's aggregate.
--
-- Refresh: REFRESH MATERIALIZED VIEW CONCURRENTLY mv_par_times;
-- Requires the UNIQUE INDEX below.

CREATE MATERIALIZED VIEW mv_par_times AS
WITH base AS (
    SELECT
        m.track_id,
        r.distance_m,
        r.race_gait_id,
        r.start_type_id,
        r.track_condition_id,
        r.race_class_id,
        r.age_class_id,
        rt.gross_time_s,
        rt.lead_time_s,
        rt.mile_rate_s
    FROM races r
    JOIN race_meetings m ON m.id = r.meeting_id
    JOIN race_times    rt ON rt.race_id = r.id
    WHERE r.distance_m IS NOT NULL
      AND r.race_gait_id IS NOT NULL
      AND r.start_type_id IS NOT NULL
),
bounds AS (
    SELECT
        track_id, distance_m, race_gait_id, start_type_id,
        track_condition_id, race_class_id, age_class_id,
        percentile_cont(0.10) WITHIN GROUP (ORDER BY gross_time_s)
            FILTER (WHERE gross_time_s IS NOT NULL AND gross_time_s > 0) AS p10_gross,
        percentile_cont(0.90) WITHIN GROUP (ORDER BY gross_time_s)
            FILTER (WHERE gross_time_s IS NOT NULL AND gross_time_s > 0) AS p90_gross,
        percentile_cont(0.10) WITHIN GROUP (ORDER BY lead_time_s)
            FILTER (WHERE lead_time_s IS NOT NULL AND lead_time_s > 0) AS p10_lead,
        percentile_cont(0.90) WITHIN GROUP (ORDER BY lead_time_s)
            FILTER (WHERE lead_time_s IS NOT NULL AND lead_time_s > 0) AS p90_lead,
        percentile_cont(0.10) WITHIN GROUP (ORDER BY mile_rate_s)
            FILTER (WHERE mile_rate_s IS NOT NULL AND mile_rate_s > 0) AS p10_mile,
        percentile_cont(0.90) WITHIN GROUP (ORDER BY mile_rate_s)
            FILTER (WHERE mile_rate_s IS NOT NULL AND mile_rate_s > 0) AS p90_mile
    FROM base
    GROUP BY 1, 2, 3, 4, 5, 6, 7
)
SELECT
    b.track_id,
    b.distance_m,
    b.race_gait_id,
    b.start_type_id,
    b.track_condition_id,
    b.race_class_id,
    b.age_class_id,
    AVG(b.gross_time_s) FILTER (
        WHERE b.gross_time_s BETWEEN bd.p10_gross AND bd.p90_gross
    )::NUMERIC(8, 3) AS par_gross_time_s,
    AVG(b.lead_time_s) FILTER (
        WHERE b.lead_time_s BETWEEN bd.p10_lead AND bd.p90_lead
    )::NUMERIC(8, 3) AS par_lead_time_s,
    AVG(b.mile_rate_s) FILTER (
        WHERE b.mile_rate_s BETWEEN bd.p10_mile AND bd.p90_mile
    )::NUMERIC(8, 3) AS par_mile_rate_s,
    COUNT(*) FILTER (WHERE b.gross_time_s BETWEEN bd.p10_gross AND bd.p90_gross)::INT AS gross_sample_size,
    COUNT(*) FILTER (WHERE b.lead_time_s BETWEEN bd.p10_lead AND bd.p90_lead)::INT AS lead_sample_size,
    COUNT(*) FILTER (WHERE b.mile_rate_s BETWEEN bd.p10_mile AND bd.p90_mile)::INT AS mile_sample_size,
    now()            AS computed_at
FROM base b
JOIN bounds bd USING (
    track_id, distance_m, race_gait_id, start_type_id,
    track_condition_id, race_class_id, age_class_id
)
GROUP BY
    b.track_id, b.distance_m, b.race_gait_id, b.start_type_id,
    b.track_condition_id, b.race_class_id, b.age_class_id
WITH NO DATA;

-- UNIQUE INDEX is required for REFRESH MATERIALIZED VIEW CONCURRENTLY.
-- NULLS NOT DISTINCT (PG15+) makes a NULL bucket equal to itself so a
-- grouping with NULL track_condition_id collapses to a single row.
-- Postgres's CONCURRENTLY refresh requires a plain column unique index
-- (no expressions, no WHERE clause), which this satisfies.
CREATE UNIQUE INDEX uq_mv_par_times_group ON mv_par_times (
    track_id,
    distance_m,
    race_gait_id,
    start_type_id,
    track_condition_id,
    race_class_id,
    age_class_id
) NULLS NOT DISTINCT;

CREATE INDEX ix_mv_par_times_track ON mv_par_times (track_id);

COMMIT;
